@@ -91,17 +91,14 @@
                         <target>1.8</target>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>2.22.0</version>
                     <configuration>
-                        <useSystemClassLoader>false</useSystemClassLoader>
                         <testFailureIgnore>false</testFailureIgnore>
                         <argLine>
-<!--                            -Xmx1024m -XX:MaxPermSize=256m-->
-                            -Xmx4g
-                            -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${env.JENKINS_HOME}/logs
                             -Dtestng.dtd.http=true
                             -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                         </argLine>
@@ -119,7 +116,6 @@
                         </dependency>
                     </dependencies>
                 </plugin>
-
             </plugins>
         </pluginManagement>
 
